--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li class="push"><a href="">Contact</a></li>
     </ul>
   </nav>
-  <div class="container zone red">Cover!!!!</div>
+  <div class="container zone red">Cover</div>
   <div class="zone blue grid-wrapper">
     <div class="box zone"><img src="./files_2.png"></div>
     <div class="box zone"><img src="./server_2_2.png"></div>
@@ -24,7 +24,7 @@
     <div class="box zone"><img src="./desktop_analytics_2.png"></div>
     <div class="box zone"><img src="./server_safe_2.png"></div>
   </div>
-  <footer class="zone yellow">Made With Love ♥</footer>
+  <footer class="zone yellow">Your Footer Here</footer>
 </div>
 </body>
 </html>
